piggy/static/css/styles.css
/* ... */
.custom-select .options-container {
  position: absolute;
  top: 100%;
  left: 0;
  right: 0;
  width: 100%;
  background-color: var(--piggy-main);
  color: var(--piggy-text-main);
  border: 1px solid var(--piggy-card-border);
  border-radius: 0.2rem;
  /* Start closed */
  max-height: 0;
  overflow-y: auto;
  opacity: 0;
  transition:
    max-height 0.3s ease-out,
    opacity 0.3s ease-out;
  z-index: 10001;
  box-sizing: border-box;
  padding: 2px;

  scrollbar-width: thin;
  scrollbar-color: var(--piggy-dark);
}

.custom-select.open .options-container::-webkit-scrollbar {
  width: 8px;
}

.custom-select.open .options-container::-webkit-scrollbar-track {
  background: #ccc;
  border-radius: 4px;
}

.custom-select.open .options-container::-webkit-scrollbar-thumb {
  background-color: #888;
  border-radius: 4px;
}

.custom-select.open .options-container {
  /* max-height is set dynamically via JS */
  opacity: 1;
  overflow-y: auto;
  z-index: 10002;
  background-color: var(--piggy-menu) !important;
  border-radius: 0.2rem;
  border: 1px solid var(--piggy-menu-text);
}

.custom-select .option {
  padding: 0.5rem;
  cursor: pointer;
  margin: 5px 2px;
  border-radius: 0.3rem;
  box-sizing: border-box;
  background-color: var(--piggy-button);
  color: var(--piggy-text-button);
}

.custom-select .option:hover {
  filter: brightness(1.15) saturate(0.75);
  background-color: var(--piggy-button-hover);
  border-color: white;
}

.custom-select:not(.open) .options-container {
  pointer-events: none;
}

/************************\
|*     LEVEL SELECT     *|
\************************/
#meta-container {
  display: flex;
  align-items: center;
  background: linear-gradient(
    90deg,
    var(--piggy-navbar-start) 0%,
    var(--piggy-navbar-end) 100%
  );
  border-top: 2px solid var(--piggy-card-start);
}

#level-container {
  padding: 10px;
  gap: 15px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  border-left: 1px solid var(--piggy-neutral);
  position: relative;
}

#level-container .snout-button {
  flex: 1;
  position: relative;
  min-width: 110px;
  max-width: 110px;
  white-space: nowrap;
  text-align: center;
}

/* Tooltip Text */
#level-container .nav-tooltip {
  visibility: hidden;
  width: max-content;
  max-width: 250px;
  background-color: var(--piggy-tooltip);
  color: var(--piggy-tooltip-text);
  text-align: center;
  padding: 5px 10px;
  border-radius: 6px;
  position: absolute;
  z-index: 1;

  /* tooltip goes below the button */
  top: calc(100% + 10px);
  left: 50%;
  transform: translateX(-50%);

  opacity: 0;
  transition: opacity 0.3s;
  pointer-events: none;
}

/* Tooltip Arrow */
#level-container .nav-tooltip::after {
  content: "";
  position: absolute;
  top: -9px;
  left: 50%;
  transform: translateX(-50%);
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent var(--piggy-tooltip) transparent;
}

@media (max-width: 600px) {
  #level-container .nav-tooltip {
    left: 10px;
    transform: none;
  }
}

@media (min-width: calc(100% - 600px)) {
  #level-container .nav-tooltip {
    right: 10px;
    left: auto;
    transform: none;
  }
}

/* Show Tooltip on Hover */
#level-container .snout-button:hover .nav-tooltip {
  visibility: visible;
  opacity: 1;
}

/* Not sure if these are needed */
@media (max-width: 600px) {
  #level-container {
    flex-wrap: wrap;
    gap: 10px;
  }

  #level-container .nav-tooltip {
    bottom: -60px;
  }
}

/****************************\
|*     LANGUAGE SECTION     *|
\****************************/
#language-container {
  position: relative;
  margin: 10px;
  z-index: 1000;
}

#language-container .snout-button {
  min-width: 150px;
}

#language-container .language-dropdown {
  width: 100%;
  display: none;
  position: absolute;
  background-color: var(--piggy-menu);
  white-space: nowrap;
  box-shadow: 0px 8px 16px 0px var(--piggy-shadow-box);
  border-radius: 5px;
  top: 100%; /* Position the dropdown below the button */
  left: 0;
  z-index: 1000;

  max-height: calc(100svh - 40svh);
  overflow-y: auto;
}

#language-container .language-dropdown a {
  color: var(--piggy-menu-text);
  padding: 5px 10px;
  text-decoration: none;
  border-radius: 0px;
  display: block;
  border-bottom: 1px solid var(--piggy-main);
  cursor: pointer;
}

#language-container .language-dropdown a:last-child {
  border-bottom: none;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
}

#language-container .language-dropdown a:first-child {
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}

#language-container .language-dropdown a:hover {
  background-color: var(--piggy-button-hover);
  color: var(--piggy-text-button);
}

#language-container:hover .language-dropdown {
  display: block;
}

/******************************\
|*     MARKDOWN OVERRIDES     *|
\******************************/

.md-container a {
  color: var(--piggy-text-hyperlink) !important;
}

.md-container a:hover {
  color: var(--piggy-text-hyperlink-hover) !important;
  text-decoration: underline;
  transition: 0.2s;
}

.assignment-heading {
  margin-top: 1em;
  text-align: center;
}

.admonition p:nth-child(2),
details p:nth-child(2) {
  margin-top: 0.6rem;
}

.admonition p:nth-child(2),
details p:nth-child(2) {
  margin-bottom: 0.6rem;
}

.md-container blockquote,
.md-container dl,
.md-container dd,
.md-container h1,
.md-container h2,
.md-container h3,
.md-container h4,
.md-container h5,
.md-container h6,
.md-container hr,
.md-container figure,
.md-container p,
.md-container pre {
  /* Set to standard value */
  margin: initial;
  padding: initial;
}

.md-content h1,
.md-content h2,
.md-content h3,
.md-content h4,
.md-content h5,
.md-content h6 {
  font-weight: bold !important;
  margin-top: 1.35rem !important;
  margin-bottom: 0.25rem !important;
}

.md-content h1,
.md-content h1 code {
  font-size: 2rem !important;
}

.md-content h2,
.md-content h2 code {
  font-size: 1.5rem !important;
}
/* ... */

